--- a/public/faq/css/styles.css
+++ b/public/faq/css/styles.css
@@ -1877,6 +1877,11 @@ video {
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-\[\#2b2b2b\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(43, 43, 43, var(--tw-bg-opacity));
+}
+
 .dark .dark\:text-gray-300 {
   --tw-text-opacity: 1;
   color: rgba(209, 213, 219, var(--tw-text-opacity));
