--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -684,18 +684,6 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -714,10 +702,6 @@ video {
 
 .flex {
   display: flex;
-}
-
-.inline-flex {
-  display: inline-flex;
 }
 
 .grid {
@@ -784,26 +768,6 @@ video {
   max-height: 17rem;
 }
 
-.min-h-\[4rem\] {
-  min-height: 4rem;
-}
-
-.min-h-\[10rem\] {
-  min-height: 10rem;
-}
-
-.min-h-\[5rem\] {
-  min-height: 5rem;
-}
-
-.min-h-\[2rem\] {
-  min-height: 2rem;
-}
-
-.min-h-\[3rem\] {
-  min-height: 3rem;
-}
-
 .min-h-\[4\.5rem\] {
   min-height: 4.5rem;
 }
@@ -856,38 +820,6 @@ video {
   width: 75%;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-\[30\%\] {
-  width: 30%;
-}
-
-.w-\[28\%\] {
-  width: 28%;
-}
-
-.w-\[29\%\] {
-  width: 29%;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-44 {
-  width: 11rem;
-}
-
 .max-w-full {
   max-width: 100%;
 }
@@ -902,10 +834,6 @@ video {
 
 .max-w-\[100\%\] {
   max-width: 100%;
-}
-
-.max-w-\[50\%\] {
-  max-width: 50%;
 }
 
 .-translate-y-2\/4 {
@@ -1127,10 +1055,6 @@ video {
   border-width: 2px;
 }
 
-.border-4 {
-  border-width: 4px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -1145,6 +1069,10 @@ video {
 
 .border-l-4 {
   border-left-width: 4px;
+}
+
+.border-b-4 {
+  border-bottom-width: 4px;
 }
 
 .border-solid {
@@ -1179,6 +1107,11 @@ video {
   border-color: rgba(217, 119, 6, var(--tw-border-opacity));
 }
 
+.border-yellow-700 {
+  --tw-border-opacity: 1;
+  border-color: rgba(180, 83, 9, var(--tw-border-opacity));
+}
+
 .border-transparent {
   border-color: transparent;
 }
@@ -1196,6 +1129,21 @@ video {
 .border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}
+
+.border-yellow-300 {
+  --tw-border-opacity: 1;
+  border-color: rgba(252, 211, 77, var(--tw-border-opacity));
+}
+
+.border-yellow-400 {
+  --tw-border-opacity: 1;
+  border-color: rgba(251, 191, 36, var(--tw-border-opacity));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 
 .border-t-yellow-500 {
@@ -1328,39 +1276,9 @@ video {
   padding-right: 1.25rem;
 }
 
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
 }
 
 .pl-2 {
@@ -1467,40 +1385,16 @@ video {
   padding-top: 3.5rem;
 }
 
-.pt-16 {
-  padding-top: 4rem;
-}
-
 .pt-20 {
   padding-top: 5rem;
-}
-
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-12 {
-  padding-left: 3rem;
 }
 
 .pr-4 {
   padding-right: 1rem;
 }
 
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pr-3 {
-  padding-right: 0.75rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
+.pl-5 {
+  padding-left: 1.25rem;
 }
 
 .text-left {
@@ -1571,10 +1465,6 @@ video {
 
 .font-bold {
   font-weight: 700;
-}
-
-.normal-nums {
-  font-variant-numeric: normal;
 }
 
 .text-transparent {
@@ -1664,6 +1554,21 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.drop-shadow-sm {
+  --tw-drop-shadow: drop-shadow(0 1px 1px rgba(0,0,0,0.05));
+  filter: var(--tw-filter);
+}
+
+.drop-shadow {
+  --tw-drop-shadow: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));
+  filter: var(--tw-filter);
+}
+
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
   filter: var(--tw-filter);
@@ -1743,6 +1648,26 @@ video {
   border-color: transparent;
 }
 
+.hover\:border-yellow-500:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(245, 158, 11, var(--tw-border-opacity));
+}
+
+.hover\:border-gray-50:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(249, 250, 251, var(--tw-border-opacity));
+}
+
+.hover\:border-gray-100:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+}
+
+.hover\:border-gray-200:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+
 .hover\:bg-yellow-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
@@ -1761,6 +1686,25 @@ video {
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.active\:border-0:active {
+  border-width: 0px;
+}
+
+.active\:border-yellow-700:active {
+  --tw-border-opacity: 1;
+  border-color: rgba(180, 83, 9, var(--tw-border-opacity));
+}
+
+.active\:border-white:active {
+  --tw-border-opacity: 1;
+  border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+}
+
+.active\:border-gray-100:active {
+  --tw-border-opacity: 1;
+  border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
 
 .active\:bg-yellow-700:active {
@@ -1815,6 +1759,10 @@ video {
   display: none;
 }
 
+.dark .dark\:border-b-2 {
+  border-bottom-width: 2px;
+}
+
 .dark .dark\:border-\[\#c7a246\] {
   --tw-border-opacity: 1;
   border-color: rgba(199, 162, 70, var(--tw-border-opacity));
@@ -1847,6 +1795,66 @@ video {
 .dark .dark\:border-\[\#555555\] {
   --tw-border-opacity: 1;
   border-color: rgba(85, 85, 85, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-yellow-700 {
+  --tw-border-opacity: 1;
+  border-color: rgba(180, 83, 9, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-red-700 {
+  --tw-border-opacity: 1;
+  border-color: rgba(185, 28, 28, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgba(239, 68, 68, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-yellow-500 {
+  --tw-border-opacity: 1;
+  border-color: rgba(245, 158, 11, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-yellow-900 {
+  --tw-border-opacity: 1;
+  border-color: rgba(120, 53, 15, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-red-900 {
+  --tw-border-opacity: 1;
+  border-color: rgba(127, 29, 29, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-\[\#6e1a0b\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(110, 26, 11, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-\[\#410e05\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(65, 14, 5, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-gray-700 {
+  --tw-border-opacity: 1;
+  border-color: rgba(55, 65, 81, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-\[\#3f3f3f\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(63, 63, 63, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-\[\#2e2e2e\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(46, 46, 46, var(--tw-border-opacity));
 }
 
 .dark .dark\:bg-\[\#1E1E1E\] {
@@ -1883,19 +1891,14 @@ video {
   background-color: rgba(26, 26, 26, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#242424\] {
+.dark .dark\:bg-\[\#2b2b2b\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(36, 36, 36, var(--tw-bg-opacity));
+  background-color: rgba(43, 43, 43, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#2b2b2b\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(43, 43, 43, var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-gray-300 {
@@ -1926,11 +1929,6 @@ video {
 .dark .dark\:text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgba(245, 158, 11, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-yellow-400 {
-  --tw-text-opacity: 1;
-  color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 
 .dark .dark\:shadow {
@@ -1970,6 +1968,16 @@ video {
 .dark .dark\:hover\:text-yellow-500:hover {
   --tw-text-opacity: 1;
   color: rgba(245, 158, 11, var(--tw-text-opacity));
+}
+
+.dark .dark\:active\:border-\[\#6e1a0b\]:active {
+  --tw-border-opacity: 1;
+  border-color: rgba(110, 26, 11, var(--tw-border-opacity));
+}
+
+.dark .dark\:active\:border-\[\#2e2e2e\]:active {
+  --tw-border-opacity: 1;
+  border-color: rgba(46, 46, 46, var(--tw-border-opacity));
 }
 
 .dark .dark\:active\:bg-\[\#6e1a0b\]:active {
@@ -2186,24 +2194,12 @@ video {
     width: auto;
   }
 
-  .xl\:w-\[68rem\] {
-    width: 68rem;
+  .xl\:w-\[63rem\] {
+    width: 63rem;
   }
 
   .xl\:w-\[55rem\] {
     width: 55rem;
-  }
-
-  .xl\:w-\[30rem\] {
-    width: 30rem;
-  }
-
-  .xl\:w-\[60rem\] {
-    width: 60rem;
-  }
-
-  .xl\:w-\[63rem\] {
-    width: 63rem;
   }
 
   .xl\:max-w-\[61rem\] {
