--- a/public/legal-notice/css/styles.css
+++ b/public/legal-notice/css/styles.css
@@ -641,6 +641,10 @@ video {
   z-index: 20;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .z-40 {
   z-index: 40;
 }
@@ -684,18 +688,6 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -714,10 +706,6 @@ video {
 
 .flex {
   display: flex;
-}
-
-.inline-flex {
-  display: inline-flex;
 }
 
 .grid {
@@ -746,6 +734,10 @@ video {
 
 .h-7 {
   height: 1.75rem;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
 }
 
 .h-6 {
@@ -780,28 +772,36 @@ video {
   height: 5rem;
 }
 
+.h-\[100100\%\] {
+  height: 100100%;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[10\%\] {
+  height: 10%;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-\[3000px\] {
+  height: 3000px;
+}
+
+.h-\[30000px\] {
+  height: 30000px;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
 .max-h-\[17rem\] {
   max-height: 17rem;
-}
-
-.min-h-\[4rem\] {
-  min-height: 4rem;
-}
-
-.min-h-\[10rem\] {
-  min-height: 10rem;
-}
-
-.min-h-\[5rem\] {
-  min-height: 5rem;
-}
-
-.min-h-\[2rem\] {
-  min-height: 2rem;
-}
-
-.min-h-\[3rem\] {
-  min-height: 3rem;
 }
 
 .min-h-\[4\.5rem\] {
@@ -822,6 +822,10 @@ video {
 
 .w-8 {
   width: 2rem;
+}
+
+.w-\[100vw\] {
+  width: 100vw;
 }
 
 .w-\[27\.5rem\] {
@@ -856,36 +860,8 @@ video {
   width: 75%;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-\[30\%\] {
-  width: 30%;
-}
-
-.w-\[28\%\] {
-  width: 28%;
-}
-
-.w-\[29\%\] {
-  width: 29%;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-44 {
-  width: 11rem;
+.w-full {
+  width: 100%;
 }
 
 .max-w-full {
@@ -902,10 +878,6 @@ video {
 
 .max-w-\[100\%\] {
   max-width: 100%;
-}
-
-.max-w-\[50\%\] {
-  max-width: 50%;
 }
 
 .-translate-y-2\/4 {
@@ -1127,10 +1099,6 @@ video {
   border-width: 2px;
 }
 
-.border-4 {
-  border-width: 4px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -1179,13 +1147,13 @@ video {
   border-color: rgba(217, 119, 6, var(--tw-border-opacity));
 }
 
-.border-transparent {
-  border-color: transparent;
-}
-
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
+
+.border-transparent {
+  border-color: transparent;
 }
 
 .border-gray-400 {
@@ -1240,6 +1208,16 @@ video {
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
+
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
+}
+
+.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1328,39 +1306,9 @@ video {
   padding-right: 1.25rem;
 }
 
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
 }
 
 .pl-2 {
@@ -1467,40 +1415,16 @@ video {
   padding-top: 3.5rem;
 }
 
-.pt-16 {
-  padding-top: 4rem;
-}
-
 .pt-20 {
   padding-top: 5rem;
-}
-
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-12 {
-  padding-left: 3rem;
 }
 
 .pr-4 {
   padding-right: 1rem;
 }
 
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pr-3 {
-  padding-right: 0.75rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
+.pl-5 {
+  padding-left: 1.25rem;
 }
 
 .text-left {
@@ -1571,10 +1495,6 @@ video {
 
 .font-bold {
   font-weight: 700;
-}
-
-.normal-nums {
-  font-variant-numeric: normal;
 }
 
 .text-transparent {
@@ -1664,6 +1584,11 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.drop-shadow-sm {
+  --tw-drop-shadow: drop-shadow(0 1px 1px rgba(0,0,0,0.05));
+  filter: var(--tw-filter);
+}
+
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
   filter: var(--tw-filter);
@@ -1739,6 +1664,16 @@ video {
   border-color: rgba(217, 119, 6, var(--tw-border-opacity));
 }
 
+.hover\:border-yellow-500:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(245, 158, 11, var(--tw-border-opacity));
+}
+
+.hover\:border-gray-200:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+
 .hover\:border-transparent:hover {
   border-color: transparent;
 }
@@ -1761,6 +1696,16 @@ video {
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.active\:border-yellow-700:active {
+  --tw-border-opacity: 1;
+  border-color: rgba(180, 83, 9, var(--tw-border-opacity));
+}
+
+.active\:border-gray-100:active {
+  --tw-border-opacity: 1;
+  border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
 
 .active\:bg-yellow-700:active {
@@ -1825,6 +1770,16 @@ video {
   border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
+.dark .dark\:border-\[\#410e05\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(65, 14, 5, var(--tw-border-opacity));
+}
+
+.dark .dark\:border-\[\#2e2e2e\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(46, 46, 46, var(--tw-border-opacity));
+}
+
 .dark .dark\:border-\[\#444444\] {
   --tw-border-opacity: 1;
   border-color: rgba(68, 68, 68, var(--tw-border-opacity));
@@ -1883,19 +1838,14 @@ video {
   background-color: rgba(26, 26, 26, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#242424\] {
+.dark .dark\:bg-\[\#2b2b2b\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(36, 36, 36, var(--tw-bg-opacity));
+  background-color: rgba(43, 43, 43, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#2b2b2b\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(43, 43, 43, var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-gray-300 {
@@ -1926,11 +1876,6 @@ video {
 .dark .dark\:text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgba(245, 158, 11, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-yellow-400 {
-  --tw-text-opacity: 1;
-  color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 
 .dark .dark\:shadow {
@@ -1970,6 +1915,16 @@ video {
 .dark .dark\:hover\:text-yellow-500:hover {
   --tw-text-opacity: 1;
   color: rgba(245, 158, 11, var(--tw-text-opacity));
+}
+
+.dark .dark\:active\:border-\[\#6e1a0b\]:active {
+  --tw-border-opacity: 1;
+  border-color: rgba(110, 26, 11, var(--tw-border-opacity));
+}
+
+.dark .dark\:active\:border-\[\#2e2e2e\]:active {
+  --tw-border-opacity: 1;
+  border-color: rgba(46, 46, 46, var(--tw-border-opacity));
 }
 
 .dark .dark\:active\:bg-\[\#6e1a0b\]:active {
@@ -2186,24 +2141,12 @@ video {
     width: auto;
   }
 
-  .xl\:w-\[68rem\] {
-    width: 68rem;
+  .xl\:w-\[63rem\] {
+    width: 63rem;
   }
 
   .xl\:w-\[55rem\] {
     width: 55rem;
-  }
-
-  .xl\:w-\[30rem\] {
-    width: 30rem;
-  }
-
-  .xl\:w-\[60rem\] {
-    width: 60rem;
-  }
-
-  .xl\:w-\[63rem\] {
-    width: 63rem;
   }
 
   .xl\:max-w-\[61rem\] {
